
- LDAP:
  . Convert resource<ldap link> to object \LDAP\Connection. (Máté)
  . Convert resource<ldap result> to object \LDAP\Result. (Máté)
  . Convert resource<ldap result entry> to object \LDAP\ResultEntry. (Máté)

- MySQLi:
  . Fixed bug #70372 (Emulate mysqli_fetch_all() for libmysqlclient). (Nikita)
  . Fixed bug #80330 (Replace language in APIs and source code/docs).
    (Darek Ślusarczyk)
  . Fixed bug #80329 (Add option to specify LOAD DATA LOCAL white list folder
    (including libmysql)). (Darek Ślusarczyk)

- MySQLnd:
  . Fixed bug #80761 (PDO uses too much memory). (Nikita)

- OPcache:
  . Added inheritance cache. (Dmitry)

- OpenSSL:
  . Bump minimal OpenSSL version to 1.0.2. (Jakub Zelenka)

- PDO:
  . Fixed bug #40913 (PDO_MYSQL: PDO::PARAM_LOB does not bind to a stream for
    fetching a BLOB). (Nikita)

. PDO MySQL:
  . Fixed bug #80908 (PDO::lastInsertId() return wrong). (matt)
  . Fixed bug #81037 (PDO discards error message text from prepared
    statement). (Kamil Tekiela)

. PDO ODBC:
  . Implement PDO_ATTR_SERVER_VERSION and PDO_ATTR_SERVER_INFO for
    PDO::getAttribute(). (Calvin Buckley)

. PDO SQLite:
  . Fixed bug #38334 (Proper data-type support for PDO_SQLITE). (Nikita)

- PgSQL:
  . Convert resource<pgsql link> to object \PgSql\Connection. (Máté)
  . Convert resource<pgsql result> to object \PgSql\Result. (Máté)
  . Convert resource<pgsql large object> to object \PgSql\Lob. (Máté)

- PSpell:
  . Convert resource<pspell> to object \PSpell\Dictionary. (Sara)
  . Convert resource<pspell config> to object \PSpell\Config. (Sara)

- Sodium:
  . Added the XChaCha20 stream cipher functions. (P.I.E. Security Team)
  . Added the Ristretto255 functions, which are available in libsodium 1.0.18.
    (P.I.E. Security Team)

- SPL:
  . Fixed bug #80724 (FilesystemIterator::FOLLOW_SYMLINKS remove KEY_AS_FILE
    from bitmask). (Cameron Porter)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>